--- a/src/main/angular/src/app/component/display/display-category-details/display-category-details.component.html
+++ b/src/main/angular/src/app/component/display/display-category-details/display-category-details.component.html
@@ -1,88 +1,99 @@
-<div class="display-details-category hide-print ">
-  <mat-tab-group [(selectedIndex)]="selectedIndex">
-    <mat-tab label="Spiele">
-      <table mat-table [dataSource]="games">
-        <ng-container matColumnDef="time">
-          <th mat-header-cell *matHeaderCellDef>Zeit</th>
-          <td mat-cell *matCellDef="let element"> {{element.startDate | date: 'HH:mm' }}</td>
-        </ng-container>
-        <ng-container matColumnDef="teamHome">
-          <th mat-header-cell *matHeaderCellDef>Heim</th>
-          <td mat-cell *matCellDef="let element"> {{element.teamHome.name}}</td>
-        </ng-container>
-        <ng-container matColumnDef="goalsTeamHome">
-          <th mat-header-cell *matHeaderCellDef>Tore</th>
-          <td mat-cell *matCellDef="let element"
-          [class.font-white]="element.state === 'OPEN'"> {{element.goalsTeamHome}}</td>
-        </ng-container>
-        <ng-container matColumnDef="placeholder">
-          <th mat-header-cell *matHeaderCellDef></th>
-          <td mat-cell *matCellDef="let element">:</td>
-        </ng-container>
-        <ng-container matColumnDef="goalsTeamGuest">
-          <th mat-header-cell *matHeaderCellDef>Tore</th>
-          <td mat-cell *matCellDef="let element"
-          [class.font-white]="element.state === 'OPEN'"> {{element.goalsTeamGuest}}</td>
-        </ng-container>
-        <ng-container matColumnDef="teamGuest">
-          <th mat-header-cell *matHeaderCellDef>Gast</th>
-          <td mat-cell *matCellDef="let element"> {{element.teamGuest.name}}</td>
-        </ng-container>
-        <ng-container matColumnDef="hall">
-          <th mat-header-cell *matHeaderCellDef>Halle</th>
-          <td mat-cell *matCellDef="let element"> {{element.hall.name}}</td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumnsGames"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumnsGames;"></tr>
-      </table>
-    </mat-tab>
-    <mat-tab label="Rangliste">
-      <table mat-table [dataSource]="teams">
-        <ng-container matColumnDef="index">
-          <th mat-header-cell *matHeaderCellDef>Platz</th>
-          <td mat-cell *matCellDef="let element;let i = index;">
-            @if (element.category.state !=='FINISHED') {
-              <span>{{i + 1}}</span>
+<div class="p-6 bg-base-200 min-h-screen hide-print">
+  <div class="tabs tabs-bordered mb-6">
+    <input type="radio" name="details_tabs" class="tab" aria-label="Spiele" [checked]="selectedIndex === 0" />
+    <div class="tab-content p-4">
+      <div class="overflow-x-auto">
+        <table class="table table-compact w-full">
+          <thead>
+            <tr class="bg-base-300">
+              <th>Zeit</th>
+              <th>Heim</th>
+              <th class="text-center">:</th>
+              <th>Gast</th>
+              <th>Halle</th>
+            </tr>
+          </thead>
+          <tbody>
+            @for (element of games; track element.id) {
+              <tr class="hover">
+                <td class="font-semibold">
+                  {{ element.startDate | date: 'HH:mm' }}
+                  @if (element.live) {
+                    <span class="badge badge-error ml-2">LIVE</span>
+                  }
+                </td>
+                <td>{{ element.teamHome.name }}</td>
+                <td class="text-center font-bold" [class.text-error]="element.live">
+                  {{ element.goalsTeamHome }}:{{ element.goalsTeamGuest }}
+                </td>
+                <td>{{ element.teamGuest.name }}</td>
+                <td>
+                  @if (element.hall?.name) {
+                    <span class="badge badge-primary">{{ element.hall.name }}</span>
+                  }
+                </td>
+              </tr>
             }
-            @if (element.category.state ==='FINISHED') {
-              <span>{{element.rank}}</span>
-            }
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef>Team</th>
-          <td mat-cell *matCellDef="let element"> {{element.name}}</td>
-        </ng-container>
-        <ng-container matColumnDef="points">
-          <th mat-header-cell *matHeaderCellDef>Punkte</th>
-          <td mat-cell *matCellDef="let element"> {{element.points}}</td>
-        </ng-container>
-        <ng-container matColumnDef="goals">
-          <th mat-header-cell *matHeaderCellDef>Goal Differenz</th>
-          <td mat-cell *matCellDef="let element"> {{element.goalsShot}}:{{element.goalsGotten}}</td>
-        </ng-container>
+          </tbody>
+        </table>
+      </div>
+    </div>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumnsTeams"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumnsTeams;" [class.hidden]="row.placeholder">
-        </tr>
-      </table>
-    </mat-tab>
-  </mat-tab-group>
+    <input type="radio" name="details_tabs" class="tab" aria-label="Rangliste" [checked]="selectedIndex === 1" />
+    <div class="tab-content p-4">
+      <div class="overflow-x-auto">
+        <table class="table table-compact w-full">
+          <thead>
+            <tr class="bg-base-300">
+              <th>Platz</th>
+              <th>Team</th>
+              <th class="text-center">Punkte</th>
+              <th class="text-center">Goal Diff.</th>
+            </tr>
+          </thead>
+          <tbody>
+            @for (element of teams; let i = $index; track element.id) {
+              @if (!element.placeholder) {
+                <tr class="hover">
+                  <td class="font-bold">
+                    @if (element.category.state !== 'FINISHED') {
+                      {{ i + 1 }}
+                    }
+                    @if (element.category.state === 'FINISHED') {
+                      {{ element.rank }}
+                    }
+                  </td>
+                  <td class="font-semibold">{{ element.name }}</td>
+                  <td class="text-center font-bold text-lg">{{ element.points }}</td>
+                  <td class="text-center">
+                    <span class="badge badge-sm">{{ element.goalsShot }}:{{ element.goalsGotten }}</span>
+                  </td>
+                </tr>
+              }
+            }
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
 </div>
-<div class="visible-print">
-  <table class="print-table">
+
+<div class="visible-print p-6">
+  <h1 class="text-2xl font-bold mb-4">Rangliste</h1>
+  <table class="table table-compact w-full print-table">
     <thead>
-      <tr>
-        <td>Rang</td>
-        <td>Name</td>
+      <tr class="bg-gray-300">
+        <th>Rang</th>
+        <th>Name</th>
       </tr>
     </thead>
-    @for (team of teams; track team) {
-      <tr>
-        <td>{{team.rank}}</td>
-        <td>{{team.name}}</td>
-      </tr>
-    }
+    <tbody>
+      @for (team of teams; track team.id) {
+        <tr>
+          <td>{{ team.rank }}</td>
+          <td>{{ team.name }}</td>
+        </tr>
+      }
+    </tbody>
   </table>
 </div>
