--- a/src/main/angular/src/app/component/display/display-home/display-home.component.scss
+++ b/src/main/angular/src/app/component/display/display-home/display-home.component.scss
@@ -1,48 +1,9 @@
 footer {
-  position: absolute;
+  position: fixed;
   left: 0;
   bottom: 0;
-  height: 40px;
   width: 100%;
-  overflow: hidden;
-
-  button {
-    width: 50%;
-  }
-}
-
-.live-game {
-  background-color: #ff7961;
-}
-
-.flex-4 {
-  flex: 4;
-}
-
-.flex-2 {
-  flex: 2;
-}
-
-.flex-1 {
-  flex: 1;
-}
-
-.flex-3 {
-  flex: 3;
-}
-
-.mat-cell {
-  span {
-    text-align: center;
-    width: 100%;
-  }
-}
-
-.mat-header-cell {
-  span {
-    text-align: center;
-    width: 100%;
-  }
+  z-index: 50;
 }
 
 .display-container {
